fix(ARC-2556): hide alert for no ocr if no essence, fix layout issues
https://meemoo.atlassian.net/browse/ARC-2556

--- a/src/modules/ie-objects/ObjectDetailPage.module.scss
+++ b/src/modules/ie-objects/ObjectDetailPage.module.scss
@@ -143,7 +143,7 @@ $zendesk-feedback-button-margin-bottom-mobile: 3.5rem;
 		border-radius: 0;
 
 		@media (max-width: $breakpoint-md) {
-			height: $metadata-media-ocr-tabs-height-mobile;
+			height: auto;
 			width: $back-to-global-search-button-width-mobile;
 		}
 	}
@@ -335,6 +335,37 @@ $zendesk-feedback-button-margin-bottom-mobile: 3.5rem;
 			grid-column: 1 / 3;
 			width: 100vw;
 		}
+
+		&--not-available {
+			grid-row: 1/4;
+			grid-column: 1/3;
+
+			@media (max-width: $breakpoint-md) {
+				height: calc(100vh - $top-navigation-bar-height - $metadata-media-ocr-tabs-height-mobile);
+			}
+		}
+	}
+
+	@media (max-width: $breakpoint-md) {
+		// mobile
+		&__media-wrapper--inside-sidebar {
+			display: block;
+		}
+
+		&__media-wrapper--outside-sidebar {
+			display: none;
+		}
+	}
+
+	@media (min-width: $breakpoint-md - 1) {
+		// desktop
+		&__media-wrapper--inside-sidebar {
+			display: none;
+		}
+
+		&__media-wrapper--outside-sidebar {
+			display: block;
+		}
 	}
 
 	&__grey-slider-bar {
@@ -393,7 +424,6 @@ $zendesk-feedback-button-margin-bottom-mobile: 3.5rem;
 	&__sidebar__content {
 		height: 100%;
 		overflow-y: auto;
-		padding-bottom: $spacer-2xl;
 		box-shadow: $shadow-24-black-12;
 
 		&__tab-media {
@@ -579,12 +609,6 @@ $zendesk-feedback-button-margin-bottom-mobile: 3.5rem;
 			.p-object-detail__media {
 				display: none;
 			}
-		}
-	}
-
-	&__wrapper--video {
-		.p-object-detail__sidebar__content {
-			display: none;
 		}
 	}
 
